dist/media/Ingress.readarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: media
  name: readarr
  namespace: media
spec:
  rules:
    - host: readarr.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: readarr
                port:
                  number: 8787
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - readarr.cmdcentral.xyz
      secretName: media-tls
